[package]
name = "connectd"
version = "0.1.0"
authors = ["Michael Farber Brodsky <taco@mailo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.1"
rcgen = "0.8.9"
socket2 = "0.3.19"
hostname = "0.3.1"
